fix z-indexes

--- a/src/components/sidepanel/styles.module.scss
+++ b/src/components/sidepanel/styles.module.scss
@@ -11,7 +11,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 2;
+  z-index: 3;
   background: $white;
   width: 100%;
   transform: translateX(-100%);
